# tg-bot

./: .env-template  Cargo.toml  README.md  deploy.sh  init-systemd.sh
migrations/: 20220828063036_init.sql  20220919090548_index_on_status.sql
src/: add.rs  config.rs  error.rs  lesson.rs  lib.rs  main.rs  replier.rs  spam_token.rs  text.rs  text.toml
